Fix various issues on mobile
Make close button of FollowUpBanner functional
Fix font issues
Stop KeenSlider autoplay when pagination dots are clicked

--- a/src/themes/mikings/DonationForm/SubComponents/SelectGroup.scss
+++ b/src/themes/mikings/DonationForm/SubComponents/SelectGroup.scss
@@ -73,4 +73,8 @@
 	&-disabled {
 		opacity: 0.3;
 	}
+
+	&-error-icon {
+		font-size: 14px;
+	}
 }
