--- a/src/themes/mikings/defaults.scss
+++ b/src/themes/mikings/defaults.scss
@@ -5,7 +5,6 @@
 		box-sizing: border-box;
 		-webkit-font-smoothing: antialiased;
 		-moz-osx-font-smoothing: grayscale;
-		font-size: 16px;
 	}
 
 	&-text-animated-highlight,
